[package]
name = "eth-lc-plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "0.1.4"
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
num = "0.4.1"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0
