[workspace]

members = [
    "eth-lc-plonky2",
]
resolver = "2"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[patch]
[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git" }
