[package]
name = "eth-lc-plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff"}
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
num = "0.4.1"
env_logger = "0.11.2"
hex = "0.4.3"
