[package]
name = "eth-lc-plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff"}
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
num = "0.4.1"
env_logger = "0.11.2"
hex = "0.4.3"
eth-types = { git = "https://github.com/aurora-is-near/rainbow-bridge" }
eth2-utility = { git = "https://github.com/aurora-is-near/rainbow-bridge" }
tree_hash = "0.5"
tree_hash_derive = "0.5"
plonky2-circuit-serializer = { git = "https://github.com/Electron-Labs/plonky2-circuit-serializer.git" }
serde_json = "1.0.114"
serde = "1.0.197"
types = { git = "https://github.com/aurora-is-near/lighthouse", branch = "unstable"}
starky_bls12_381 = {git = "https://github.com/Electron-Labs/starky_bls12_381", branch = "feat/ec_aggregate_pk"}
reqwest = { version = "0.11", features = ["json"] } 
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] } 
serde_yaml = "0.9.32"
